create right section
create class right   insisted of def section being in right side

--- a/style.css
+++ b/style.css
@@ -53,13 +53,13 @@ canvas {
   }
 
   section {
-    grid-column: 2 / 8;
     padding: 1rem;
     background: var(--dark-bg);
     font-size: 1.25rem;
     line-height: 1.5;
     margin-bottom: var(--spacing);
   }
+
 
   blockquote {
     margin: 0;
@@ -75,6 +75,9 @@ canvas {
     display: inline;
     line-height: 1;
   }
+   .right{
+      grid-column: 2 / 8;
+}
 
   .left {
     grid-column: 6 / 12;
